welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:60: error: '(' expected but identifier found.
  for compteur(<-1 to 4){
      ^